[package]
name = "sort-wasm"
version = "0.1.0"
authors = ["Your Name <your@email.com>"]
edition = "2021"
description = "Reusable WASM package for dynamic sorting algorithms."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
